[package]
name = "smart_open"
version = "0.1.2"
authors = ["joydeep bhattacharjee <joydeepubuntu@gmail.com>"]
edition = "2018"
description = "opens files for reading."
repository = "https://github.com/infinite-Joy/smart-open"
readme = "README.md"
license = "MIT"

[dependencies]
flate2 = "^1"
rust-s3 = "0.11.0"
log = "0.4"
reqwest = "0.9.8"